--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "npx serve -s dist",
+    "preview": "vite preview",
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "serve": "^14.2.4"
   }
 }
